Prevent horizontal scrollbar in popup

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -23,7 +23,7 @@ body {
   margin: 2px;
   font-size: 1.3em;
   font-weight: bold;
-  width: 100%;
+  width: 99%;
   text-align: center;
 }
 
